Fixed cards on smaller phones

--- a/css/card.css
+++ b/css/card.css
@@ -15,19 +15,45 @@
     height: 100%;
 
     transition: transform 1s;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
     transform-style: preserve-3d;
 }
 
-
-@media (min-width: 600px) {
-    .card:hover .card-content {
+@media (max-width: 1000px) {
+    #afl .card-content, #staff .card-content {
+        -webkit-transform: rotateY(180deg);
+        -moz-transform: rotateY(180deg);
+        -ms-transform: rotateY(180deg);
+        -o-transform: rotateY(180deg);
         transform: rotateY(180deg);
+        transition: transform 0.5s;
+    }
+
+    #alastair .card-content{
+        -webkit-transform: rotateY(0deg);
+        -moz-transform: rotateY(0deg);
+        -ms-transform: rotateY(0deg);
+        -o-transform: rotateY(0deg);
+        transform: rotateY(0deg);
         transition: transform 0.5s;
     }
 }
 
+@media (min-width: 600px) {
 
+    .card:hover .card-content {
 
+        -webkit-transform: rotateY(180deg);
+        -moz-transform: rotateY(180deg);
+        -ms-transform: rotateY(180deg);
+        -o-transform: rotateY(180deg);
+        transform: rotateY(180deg);
+        transition: transform 0.5s;
+    }
+
+}
 
 .card-front,
 .card-back {
@@ -43,7 +69,10 @@
 }
 
 .card-back {
-    background: linear-gradient(0deg, #c63688, #7936c6);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
     transform: rotateY(180deg);
     display: flex;
 }
